--- a/index.css
+++ b/index.css
@@ -1,3 +1,13 @@
+/* ------------------- */
+/* Custom properties   */
+/* ------------------- */
+
+:root {
+  --clr-darkblue: 230 35% 7%;
+  --clr-lightblue: 231 77% 90%;
+  --clr-white: 0 0% 100%;
+}
+
 /* ------------------------ */
 /* Reset                    */
 /* ------------------------ */
@@ -86,4 +96,30 @@ select{
   clip: rect(0, 0, 0, 0);
   white-space: nowrap; /* added line */
   border: 0;
+}
+
+/* colors */
+
+.bg-dark{
+  background-color: hsl( var(--clr-darkblue) );
+}
+
+.bg-light{
+  background-color: hsl( var(--clr-lightblue) );
+}
+
+.bg-white{
+  background-color: hsl( var(--clr-white) );
+}
+
+.txt-dark{
+  color: hsl( var(--clr-darkblue) );
+}
+
+.txt-light{
+  color: hsl( var(--clr-lightblue) );
+}
+
+.txt-white{
+  color: hsl( var(--clr-white) );
 }
