--- a/index.css
+++ b/index.css
@@ -272,3 +272,37 @@ select{
   opacity: 1;
   transform: scale(1.5);
 }
+
+.primary-navigation {
+    --gap: 8rem;
+    --underline-gap: 2.3em;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    background: rgba(255, 255, 255, 0.04);
+    backdrop-filter: blur(81.5485px);
+    justify-content: center;
+}
+
+.primary-navigation a {
+    text-decoration: none;
+}
+
+.primary-navigation a > span {
+    font-weight: 700;
+    margin-right: .5em;
+}
+
+.underline-indicators > * {
+   padding: var(--underline-gap, 1rem) 0;
+   border-bottom: .2rem solid hsl(var(--clr-white) / 0);
+}
+
+.underline-indicators > *:hover,
+.underline-indicators > *:focus {
+  border-color: hsl( var(--clr-white) / .5);
+}
+
+.underline-indicators > .active {
+  border-color: hsl( var(--clr-white) / .9);
+}
