--- a/index.css
+++ b/index.css
@@ -294,7 +294,9 @@ select{
 }
 
 .underline-indicators > * {
-   padding: var(--underline-gap, 1rem) 0;
+    cursor: pointer;
+    padding: var(--underline-gap, 1rem) 0;
+    border: 0;
    border-bottom: .2rem solid hsl(var(--clr-white) / 0);
 }
 
@@ -303,6 +305,11 @@ select{
   border-color: hsl( var(--clr-white) / .5);
 }
 
-.underline-indicators > .active {
-  border-color: hsl( var(--clr-white) / .9);
+.underline-indicators > .active,
+.underline-indicators > [aria-selected="true"]{
+    border-color: hsl( var(--clr-white) / 1);
+}
+
+.tab-list{
+  --gap: 2.2rem;
 }
