--- a/index.css
+++ b/index.css
@@ -89,9 +89,9 @@ body{
   color: hsl( var(--clr-white) );
   line-height:  1.5;
   min-height: 100vh;
-
   display: grid;
   grid-template-rows: min-content 1fr;
+  overflow-x: hidden;
 }
 
 /* makes images easier to work with */
@@ -341,9 +341,13 @@ select{
   list-style: none;
   padding: 0;
   margin: 0;
-  background: hsl( var(--clr-dark) / 0.95);
+  background: hsl( var(--clr-darkblue) / 0.95);
   justify-content: center;
   flex-direction: row;
+}
+
+.mobile-nav-toggle {
+  display: none;
 }
 
 @supports (backdrop-filter: blur(1rem)) {
@@ -372,18 +376,45 @@ select{
 
 @media (max-width:35em) {
   .primary-navigation {
-    --gap: 2rem;
+    --gap: 0.8rem;
     --underline-gap: .5em;
     position: fixed;
     padding: min(20rem, 15vh) 0 0 8vw;
     flex-direction: column;
-    inset: 0 0 0 20%;
+    inset: 0 0 0 30%;
     z-index: 2;
-    justify-content: start;
+    justify-content: flex-start;
+    transform: translateX(100%);
+    transition: transform .8s ease-in-out;
   }
+
+  .primary-navigation[data-visible="true"] {
+    transform: translateX(0);
+  }
+
   .primary-navigation.underline-indicators > *{
     border: 0;
     border-right: .3rem solid hsl(var(--clr-white) / 0);
+  }
+
+  .mobile-nav-toggle{
+    display: block;
+    position: absolute;
+    z-index:3;
+    right: 1rem;
+    top: 2rem;
+    background: transparent;
+    background-image: url(./assets/shared/icon-hamburger.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 1.5rem;
+    aspect-ratio: 1;
+    border: 0;
+    transition: background-image .8s linear;
+  }
+  .mobile-nav-toggle:focus-visible {
+    outline: 5px solid white;
+    outline-offset: 5px;
   }
 }
 
