--- a/index.css
+++ b/index.css
@@ -335,8 +335,20 @@ select{
   transform: scale(1.5);
 }
 
+/* primary-navigation */
+
+.logo {
+ margin: 2rem clamp(1.5rem, 5vw, 3.5rem);
+}
+
+.primary-header {
+  justify-content: space-between;
+  align-items: center;
+}
+
+
 .primary-navigation {
-  --gap: 8rem;
+  --gap: clamp(2rem, 5vw, 3.5rem);
   --underline-gap: 2.3em;
   list-style: none;
   padding: 0;
@@ -415,6 +427,16 @@ select{
   .mobile-nav-toggle:focus-visible {
     outline: 5px solid white;
     outline-offset: 5px;
+  }
+}
+
+@media (min-width: 35em) and (max-width: 45em) {
+  .primary-navigation {
+    padding-inline: 2.5rem;
+    inset: 0 0 0 60%;
+  }
+  .md-hidden {
+    display: none;
   }
 }
 
