--- a/index.css
+++ b/index.css
@@ -430,16 +430,37 @@ select{
   }
 }
 
-@media (min-width: 35em) and (max-width: 45em) {
+@media (min-width: 35em){
   .primary-navigation {
-    padding-inline: 2.5rem;
-    inset: 0 0 0 60%;
+    padding-inline: clamp(3rem, 7vw, 7rem);
   }
+}
+
+@media (min-width: 35em) and (max-width: 44.999em) {
   .md-hidden {
     display: none;
   }
 }
 
+@media (min-width: 45em) {
+  .primary-header::before{
+    content: '';
+    display: block;
+    position: relative;
+    height: 1.5px;
+    background: hsl(var(--clr-white) / .25);
+    width: 100%;
+    z-index: 2;
+    order: 1;
+    margin-right: -2.6rem;
+  }
+  nav{
+    order: 2;
+  }
+  .primary-navigation {
+    margin-block: 2rem;
+  }
+}
 
 .underline-indicators > *:hover,
 .underline-indicators > *:focus {
