add accessiblity tweaks

--- a/index.css
+++ b/index.css
@@ -193,6 +193,21 @@ select{
   border: 0;
 }
 
+.skip-to-content {
+  position: absolute;
+  background: hsl( var(--clr-white) );
+  color: hsl( var(--clr-darkblue) );
+  padding: .5rem 1em;
+  margin-inline: auto;
+  z-index: 5;
+  transform: translateY(-100%);
+  transition: transform .5s ease;
+}
+
+.skip-to-content:focus {
+  transform: translateY(0);
+}
+
 /* colors */
 
 .bg-dark{
