--- a/index.css
+++ b/index.css
@@ -30,6 +30,7 @@
       --fs-800: 5rem;
       --fs-700: 2.5rem;
       --fs-600: 1.5rem;
+      --fs-500: 1.25rem;
       --fs-400: 1rem;
   }
 }
@@ -125,7 +126,7 @@ select{
 /* Utility classes          */
 /* ------------------------ */
 
-.flex{
+.flex {
   display: flex;
   gap: var(--gap, 1rem);
 }
@@ -147,38 +148,6 @@ select{
   padding-inline: 2em;
   margin-inline: auto;
   max-width: 80rem;
-}
-
-.grid-container {
-  display: grid;
-  text-align: center;
-  place-items: center;
-  padding-inline: 1rem;
-}
-
-.grid-container * {
-  max-width: 50ch;
-}
-
-@media (min-width: 45em) {
-  .grid-container{
-    text-align: left;
-    column-gap: var(--container-gap, 2rem);
-    grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(2rem, 1fr);
-  }
-
-  .grid-container > *:first-child {
-    grid-column: 2;
-  }
-
-  .grid-container > *:last-child {
-    grid-column: 3;
-  }
-
-  .home .grid-container {
-    padding-bottom: max(6rem, 20vh);
-    align-items: end;
-  }
 }
 
 .sr-only {
@@ -220,6 +189,10 @@ select{
 
 .bg-white{
   background-color: hsl( var(--clr-white) );
+}
+
+.bg-transparent{
+  background-color: transparent;
 }
 
 .txt-dark{
@@ -305,7 +278,7 @@ select{
 
 .numbered-title{
   font-family: var( --ff-sans-cond );
-  font-size: var(--fs-500);
+  font-size: var(--fs-600);
   text-transform: uppercase;
   letter-spacing: 0.297rem;
 }
@@ -554,5 +527,96 @@ body {
 @media (min-width: 45em) {
   .home{
     background-image: url('./assets/home/background-home-desktop.jpg');
+  }
+}
+
+/* destination */
+
+.destination {
+  background-image: url('./assets/destination/background-destination-mobile.jpg');
+}
+
+@media (min-width: 35em) {
+  .destination{
+    background-position: center center;
+    background-image: url('./assets/destination/background-destination-tablet.jpg');
+  }
+}
+
+@media (min-width: 45em) {
+  .destination{
+    background-image: url('./assets/destination/background-destination-desktop.jpg');
+  }
+}
+
+/* ----------------------------- */
+/* Layout                        */
+/* ----------------------------- */
+
+.grid-container {
+  display: grid;
+  text-align: center;
+  place-items: center;
+  padding-inline: 1rem;
+  padding-bottom: 2rem;
+}
+
+.grid-container *:not(h3) {
+  max-width: 50ch;
+}
+
+/* destination layout */
+
+.grid-container--destination {
+  --flow-space: 2rem;
+  grid-template-areas:
+      'title'
+      'image'
+      'tabs'
+      'content';
+}
+
+.numbered-title {
+  grid-area: title;
+}
+
+.grid-container--destination > img {
+  grid-area: image;
+  max-width: 60%;
+}
+
+.grid-container--destination > .tab-list {
+  grid-area: tabs;
+}
+
+.grid-container--destination > .destination-info {
+  grid-area: content;
+}
+
+.destination-meta {
+  flex-direction: column;
+  border-top: 1px solid hsl( var(--clr-white) / .1);
+  padding-top: 1.5rem;
+  margin-top: 2.5rem;
+}
+
+@media (min-width: 45em) {
+  .grid-container{
+    text-align: left;
+    column-gap: var(--container-gap, 2rem);
+    grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(2rem, 1fr);
+  }
+
+  .grid-container > *:first-child {
+    grid-column: 2;
+  }
+
+  .grid-container > *:last-child {
+    grid-column: 3;
+  }
+
+  .home .grid-container {
+    padding-bottom: max(6rem, 20vh);
+    align-items: end;
   }
 }
