--- a/index.css
+++ b/index.css
@@ -603,7 +603,7 @@ body {
 @media (min-width: 35em) {
   .numbered-title {
     margin-top: 2rem;
-    place-self: start;
+    justify-self: start;
   }
   .destination-meta {
     flex-direction: row;
@@ -618,17 +618,34 @@ body {
     grid-template-columns: minmax(2rem, 1fr) repeat(2, minmax(0, 40rem)) minmax(2rem, 1fr);
   }
 
-  .grid-container > *:first-child {
-    grid-column: 2;
-  }
-
-  .grid-container > *:last-child {
-    grid-column: 3;
-  }
-
-  .home .grid-container {
+  .grid-container--home {
     padding-bottom: max(6rem, 20vh);
     align-items: end;
   }
 
+  .grid-container--home > *:first-child {
+    grid-column: 2;
+  }
+
+  .grid-container--home > *:last-child {
+    grid-column: 3;
+  }
+
+  .destination-meta {
+    justify-content: start;
+    --gap: 4rem;
+  }
+
+  .grid-container--destination {
+    justify-items: start;
+    align-content: start;
+    grid-template-areas:
+        '. title title .'
+        '. image tabs .'
+        '. image content .';
+  }
+
+  .grid-container--destination > img {
+    max-width: 90%;
+  }
 }
