--- a/index.css
+++ b/index.css
@@ -694,3 +694,15 @@ body {
 .grid-container--crew > .crew-info {
   grid-area: content;
 }
+
+@media (min-width: 35em) {
+  .grid-container--crew {
+    --flow-space: 3rem;
+    padding-bottom: 0;
+    grid-template-areas:
+        'title'
+        'content'
+        'dots'
+        'image';
+  }
+}
