--- a/index.css
+++ b/index.css
@@ -533,6 +533,8 @@ body {
 
 .destination {
   background-image: url('./assets/destination/background-destination-mobile.jpg');
+  overflow: hidden;
+  scrollbar-gutter: stable;
 }
 
 @media (min-width: 35em) {
@@ -601,6 +603,7 @@ body {
 .grid-container--destination > picture {
   grid-area: image;
   max-width: 60%;
+  align-self: start;
 }
 
 .grid-container--destination > .tab-list {
@@ -716,6 +719,7 @@ body {
 
 @media (min-width: 45em) {
   .grid-container--crew {
+    grid-template-columns: minmax(1rem, 1fr) minmax(0, 37rem) minmax(0, 23rem) minmax(1rem, 1fr);
     justify-items: start;
     grid-template-areas:
         '. title image .'
@@ -723,6 +727,7 @@ body {
         '. dots image .';
   }
   .grid-container--crew > picture {
+    grid-column: span 2;
     max-width: 100%;
     align-self: end;
   }
